--- a/css/style.css
+++ b/css/style.css
@@ -296,52 +296,42 @@ header .navcontainer {
 -------------------------------------------------- */
 
 .contact {
-    padding-top: 100px;
-    padding-bottom: 100px;
-    background-color: #F1EDF1;
-    font-weight: 100;
-    font-size: 4em;
-    font-family: "Helvetica Neue", sans-serif;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
-.contact .container {
-    background-color: #fff;
-    border: solid 4px #297ACC;
-    width: 50%;
-    margin-left: 25%;
-    color: #297ACC;
+.contact .mediabutton {
+    border-radius: 50%;
 }
 
-.contact .container:hover {
-    background-color: #297ACC;
-    border: solid 4px #297ACC;
-    font-size: 1em;
-}
-
-.contact a {
-    text-decoration: none;
-    color: #297ACC;
-}
-
-.contact a:hover {
-    color: #fff;
+.contact .mediabutton:hover {
+    background-color: #FFA347;
 }
 
 /* FOOTER SECTION
 -------------------------------------------------- */
 
 .footer {
-    padding-top: 8px;
+    padding-top: 0px;
     padding-bottom: 8px;
-    background-color: #000;
+    background-color: #fff;
+}
+
+.footer hr {
+    width: 50%;
+    margin-left: 25%;
+    margin-bottom: 5px;
 }
 
 .footer .copyright {
     font-weight: 100;
     font-size: 1.2em;
     font-family: "Helvetica Neue", sans-serif;
-    color: #fff;
+    color: #000;
 }
+
+
+
 
 
 
