--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ header .sectiontext {
     font-weight: 400;
     font-size: 5em;
     font-style: normal;
-    font-family: "Montserrat", "Helvetica Neue", sans-serif;
+    font-family: "Helvetica Neue", sans-serif;
     text-align: center;
     color: #000;
 }
