--- a/css/style.css
+++ b/css/style.css
@@ -401,12 +401,13 @@ padding: 0;
 
 .col {
     float: left;
-    width:33.333333333333333333333%;
+    width:33.333333333333333333333333%;
     margin-left:0px;
     margin-right:0px;
     padding-left:0px;
     padding-right:0px;
     text-align: center;
+    min-width: 200px;
 }
 
 .clear {
