--- a/arrows/style.css
+++ b/arrows/style.css
@@ -2,7 +2,7 @@
     margin-top: 40px;
     margin-bottom: 40px;
 	text-align: center;
-    border: 1px solid;
+    border: 3px solid;
     border-radius: 50%;
 }
 
@@ -11,7 +11,7 @@
 	text-align: center;
 	font-size: 3em;
     font-weight: 100;
-    font-family: "Helvetica Neue";
+    font-family: "Montserrat", "Helvetica Neue";
 }
 
 #timerDiv {
@@ -19,15 +19,15 @@
 	text-align: center;
 	font-size: 3em;
     font-weight: 100;
-    font-family: "Helvetica Neue";
+    font-family: "Montserrat", "Helvetica Neue";
 }
 
 .instructions {
     margin: 50px;
     text-align: center;
-    font-size: 3em;
+    font-size: 2.3em;
     font-weight: 100;
-    font-family: "Helvetica Neue";
+    font-family: "Montserrat", "Helvetica Neue";
 }
 
 .instructions hr {
@@ -37,7 +37,7 @@
 
 .instructions .icon {
     margin: 25px;
-    border: 1px solid;
+    border: 3px solid;
     border-radius: 50%;
     height: 25%;
     display: inline;
@@ -53,20 +53,21 @@
     text-align: center;
     font-size: 3em;
     font-weight: 100;
-    font-family: "Helvetica Neue";
-    color: #297ACC;
+    font-family: "Montserrat", "Helvetica Neue";
+    color: #fff;
+    background-color: #297ACC;
 
-    border: 2px solid;
+    border: 3px solid;
     width: 50%;
 
-    float:left;
+    float: left;
     margin-left: 25%;
     padding-top: 10px;
     padding-bottom: 12px;
 }
 
 .button:hover {
-    color: #FFA347
+    background-color: #FFA347;
 }
 
 a, visited {
