--- a/arrows/style.css
+++ b/arrows/style.css
@@ -1,3 +1,7 @@
+body {
+    background-color: #ccc;
+}
+
 #image {
     margin-top: 40px;
     margin-bottom: 40px;
@@ -57,13 +61,14 @@
     color: #fff;
     background-color: #297ACC;
 
-    border: 3px solid;
+    border: 3px solid #ccc;
     width: 50%;
 
     float: left;
     margin-left: 25%;
     padding-top: 10px;
     padding-bottom: 12px;
+    border-radius: 15px;
 }
 
 .button:hover {
