--- a/arrows/style.css
+++ b/arrows/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #ccc;
+    background-color: #eee;
 }
 
 #image {
@@ -61,7 +61,7 @@ body {
     color: #fff;
     background-color: #297ACC;
 
-    border: 3px solid #ccc;
+    border: 3px solid #eee;
     width: 50%;
 
     float: left;
