--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,21 @@
     font-family: "Helvetica Neue", sans-serif;
 }
 
+#blog {
+    background-image: url("../images/blog.jpg");
+    background-attachment: fixed;
+}
+
+#blog .title {
+    padding-top: 300px;
+    text-align: center;
+    font-size: 4em;
+    font-weight: 100;
+    color: white;
+    font-family: "Open Sans", sans-serif;
+}
+
+
 
 html {
   height: 100%;
