--- a/css/style.css
+++ b/css/style.css
@@ -59,10 +59,25 @@
 #columbia .title {
     padding-top: 110px;
     text-align: center;
-    font-size: 4em;
+    font-size: 3.8em;
     font-weight: 100;
     color: white;
     font-family: "Helvetica Neue", sans-serif;
+    position: relative;
+    min-height: 100vh;
+    width: 100vw;
+    transform-style: inherit;
+}
+
+@media (max-width: 769px) {
+    #columbia .title {
+        padding-top: 110px;
+        text-align: center;
+        font-size: 2.5em;
+        font-weight: 100;
+        color: white;
+        font-family: "Helvetica Neue", sans-serif;
+    }
 }
 
 #blog {
